1, first init project.

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ember-jq-plot-demo.css">
+    <!--[if lt IE 9]><script language="javascript" type="text/javascript" src="/assets/javascript/excanvas.js"></script><![endif]-->
 
     {{content-for "head-footer"}}
   </head>
